appId: ${MAESTRO_APP_ID}
---
- launchApp
- runFlow:
    when:
      visible: "${EXPO_DEV_SERVER_LABEL}"
    commands:
      - tapOn: "${EXPO_DEV_SERVER_LABEL}"
- runFlow:
    when:
      visible: "http://10.0.2.2:8081"
    commands:
      - tapOn: "http://10.0.2.2:8081"
- runFlow:
    when:
      visible: "http://localhost:8081"
    commands:
      - tapOn: "http://localhost:8081"
- runFlow:
    when:
      visible: "http://127.0.0.1:8081"
    commands:
      - tapOn: "http://127.0.0.1:8081"
- runFlow:
    when:
      visible: "Got It"
    commands:
      - tapOn: "Got It"
- runFlow:
    when:
      visible: "Continue"
    commands:
      - tapOn: "Continue"
- runFlow:
    when:
      visible: "Go home"
    commands:
      - tapOn: "Go home"
- runFlow:
    when:
      visible: "Toggle performance monitor"
    commands:
      - swipe:
          from:
            text: "Toggle performance monitor"
          direction: DOWN
- runFlow:
    when:
      visible:
        id: "sign-in-screen"
    commands:
      - assertVisible:
          id: "sign-in-screen"
- runFlow:
    when:
      visible:
        id: "search-header-button"
    commands:
      - assertVisible:
          id: "search-header-button"
